# bmstu-oop

./: readme.md
lab_01/: data1.txt  lab_01.pro  mainwindow.ui
lab_01/inc/: action.h  canvas.h  data.h  edges.h  errors.h  figure.h  fileio.h  mainwindow.h  math.h  point.h  points.h
lab_01/src/: action.cpp  canvas.cpp  edges.cpp  errors.cpp  figure.cpp  fileio.cpp  mainwindow.cpp  math.cpp  point.cpp  points.cpp
lab_02/: CMakeLists.txt
lab_02/inc/Concepts/: VectorConcepts.h
lab_02/inc/Error/: BaseError.h  VectorError.h
lab_02/inc/Exception/: BaseException.h  IteratorException.h  VectorException.h
lab_02/inc/Vector/: BaseVector.h  Vector.h  Vector.hpp
lab_02/src/: main.cpp
